; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_backend.c_hc_clEnqueueReadBuffer.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_backend.c_hc_clEnqueueReadBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i64 }
%struct.TYPE_8__ = type { i64 (i32, i32, i32, i64, i64, i8*, i32, i32*, i32*)* }

@CL_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [26 x i8] c"clEnqueueReadBuffer(): %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hc_clEnqueueReadBuffer(%struct.TYPE_6__* %0, i32 %1, i32 %2, i32 %3, i64 %4, i64 %5, i8* %6, i32 %7, i32* %8, i32* %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_6__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca %struct.TYPE_7__*, align 8
  %23 = alloca %struct.TYPE_8__*, align 8
  %24 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %12, align 8
  store i32 %1, i32* %13, align 4
  store i32 %2, i32* %14, align 4
  store i32 %3, i32* %15, align 4
  store i64 %4, i64* %16, align 8
  store i64 %5, i64* %17, align 8
  store i8* %6, i8** %18, align 8
  store i32 %7, i32* %19, align 4
  store i32* %8, i32** %20, align 8
  store i32* %9, i32** %21, align 8
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %26, align 8
  store %struct.TYPE_7__* %27, %struct.TYPE_7__** %22, align 8
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %22, align 8
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = inttoptr i64 %30 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %31, %struct.TYPE_8__** %23, align 8
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %23, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = load i64 (i32, i32, i32, i64, i64, i8*, i32, i32*, i32*)*, i64 (i32, i32, i32, i64, i64, i8*, i32, i32*, i32*)** %33, align 8
  %35 = load i32, i32* %13, align 4
  %36 = load i32, i32* %14, align 4
  %37 = load i32, i32* %15, align 4
  %38 = load i64, i64* %16, align 8
  %39 = load i64, i64* %17, align 8
  %40 = load i8*, i8** %18, align 8
  %41 = load i32, i32* %19, align 4
  %42 = load i32*, i32** %20, align 8
  %43 = load i32*, i32** %21, align 8
  %44 = call i64 %34(i32 %35, i32 %36, i32 %37, i64 %38, i64 %39, i8* %40, i32 %41, i32* %42, i32* %43)
  store i64 %44, i64* %24, align 8
  %45 = load i64, i64* %24, align 8
  %46 = load i64, i64* @CL_SUCCESS, align 8
  %47 = icmp ne i64 %45, %46
  br i1 %47, label %48, label %53

48:                                               ; preds = %10
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %50 = load i64, i64* %24, align 8
  %51 = call i32 @val2cstr_cl(i64 %50)
  %52 = call i32 @event_log_error(%struct.TYPE_6__* %49, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %51)
  store i32 -1, i32* %11, align 4
  br label %54

53:                                               ; preds = %10
  store i32 0, i32* %11, align 4
  br label %54

54:                                               ; preds = %53, %48
  %55 = load i32, i32* %11, align 4
  ret i32 %55
}

declare dso_local i32 @event_log_error(%struct.TYPE_6__*, i8*, i32) #1

declare dso_local i32 @val2cstr_cl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
